testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1214) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2429(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1215) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#1323 = spawn use_ref(r): type#1323: type#1323
  await(task): type#1324
  return
}

borrow edges:
  L2431(r) (&) borrows L2430(x) at 0:87-89 scope=S5
events:
  borrow_start L2431(r) -> L2430(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2431(r) -> L2430(x) at 0:120-121 scope=S5 note="B1"
  move L2432(task) at 0:128-132 scope=S5
  borrow_end L2431(r) -> L2430(x) scope=S5 note="scope_end B1"
move plan:
  L2430(x): MoveCopy (copy type)
  L2431(r): MoveForbidden (spawn escape)
  L2432(task): MoveNeedsDrop (non-copy (drop))

